--- a/config_sample.env
+++ b/config_sample.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""                               running
+BOT_TOKEN = "8122407411:AAF7zu73kCd0QH_BHjmestD2Acyuad3PTtI"                               running
 OWNER_ID = "5371579102"                                running
 TELEGRAM_API = "26578883"                            running
 TELEGRAM_HASH = "a1a89f14a30226181296bba23290b286"                           running
