--- a/config_sample.env
+++ b/config_sample.env
@@ -1,18 +1,19 @@
+# Remove this line before deploying
 # REQUIRED CONFIG
-BOT_TOKEN = "8122407411:AAF7zu73kCd0QH_BHjmestD2Acyuad3PTtI"                               running
-OWNER_ID = "5371579102"                                running
-TELEGRAM_API = "26578883"                            running
-TELEGRAM_HASH = "a1a89f14a30226181296bba23290b286"                           running
+BOT_TOKEN = "8122407411:AAF7zu73kCd0QH_BHjmestD2Acyuad3PTtI"                              # Require restart after changing it while bot running
+OWNER_ID = "5371579102"                               # Require restart after changing it while bot running
+TELEGRAM_API = "26578883"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "a1a89f14a30226181296bba23290b286"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
-USER_SESSION_STRING = ""                     running
-DATABASE_URL = "mongodb+srv://interdb:54ZWuI2Go8cnD97N@interdb.iqvwgu.mongodb.net/"                            running
-DOWNLOAD_DIR = "/usr/src/app/downloads/"     running
-CMD_SUFFIX = ""                              running
-AUTHORIZED_CHATS = "-1002443870663"                        running
-SUDO_USERS = ""                              running
-BLACKLIST_USERS = "6686210371"                         running
-STATUS_LIMIT = "5"
+USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://interdb:54ZWuI2Go8cnD97N@interdb.iqvwgu.mongodb.net/"                           # Require restart after changing it while bot running
+DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
+CMD_SUFFIX = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1002443870663"                       # Require restart after changing it while bot running
+SUDO_USERS = "6686210371"                             # Require restart after changing it while bot running
+BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
+STATUS_LIMIT = "7"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "3"
 AUTO_DELETE_MESSAGE_DURATION = "60"
