--- a/config_sample.env
+++ b/config_sample.env
@@ -1,6 +1,6 @@
 # Remove this line before deploying
 # REQUIRED CONFIG
-BOT_TOKEN = "81"                              # Require restart after changing it while bot running
+BOT_TOKEN = "FuckYourMom"                              # Require restart after changing it while bot running
 OWNER_ID = "5371579102"                               # Require restart after changing it while bot running
 TELEGRAM_API = "26578883"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "a1a89f14a30226181296bba23290b286"                          # Require restart after changing it while bot running
